--- a/pre.html
+++ b/pre.html
@@ -9,7 +9,7 @@
             I am Amulya Nelakuri and it is a pleasure to meet you.
             I am a student at QIS College of Engineering and Technology.
             I am learning HTML and CSS.
-            I hope to become a eveloper in the future.
+            I hope to become a developer in the future.
             Thank you for your time.        
 
         </pre>
